theme: fix wrapping of not-by-ai image

--- a/themes/smol/assets/scss/main.scss
+++ b/themes/smol/assets/scss/main.scss
@@ -164,7 +164,7 @@ h1 {
 div.article-title {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0 1rem;
 
   h1 {
     flex-grow: 1;
@@ -181,9 +181,7 @@ div.article-title {
   }
 
   @media screen and (max-width: 600px) {
-    flex-direction: column;
-    align-items: start;
-    gap: 0;
+    flex-wrap: wrap;
   }
 }
 
